fix alignment of buttons on profile page

--- a/app/styles/app/pro.sass
+++ b/app/styles/app/pro.sass
@@ -60,7 +60,7 @@
       position: absolute
       display: block
       right: 0
-      margin: -45px 40px 0 0
+      margin: -54px 30px 0 0
       padding-right: 25px
 
       &:before
