--- a/app/styles/app/profile.sass
+++ b/app/styles/app/profile.sass
@@ -50,4 +50,4 @@
 
       .sync_now
         float: right
-        margin-top: -3px
+        margin-top: -6px
